better logs and  swagger handling
